fix lint before push

--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,10 @@
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "prettier": "2.4.1",
+    "vite": "^1.0.0-rc.13"
   }
 }
