--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^7.18.0",
     "prettier": "2.4.1",
     "vite": "^1.0.0-rc.13"
