--- a/web/package.json
+++ b/web/package.json
@@ -3,20 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "daisyui": "^1.14.1",
-    "vue": "^3.0.4"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-vue": "^7.18.0",
-    "prettier": "2.4.1",
-    "vite": "^1.0.0-rc.13"
+    "@vitejs/plugin-vue": "^1.9.0",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.10",
+    "vue-tsc": "^0.3.0"
   }
 }
