--- a/web/package.json
+++ b/web/package.json
@@ -7,11 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
+    "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "vite": "^2.5.10",
     "vue-tsc": "^0.3.0"
