--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
+    "prettier": "^2.4.1",
     "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "vite": "^2.5.10",
