--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^4.31.2",
     "@vitejs/plugin-vue": "^1.9.0",
     "autoprefixer": "^9.8.6",
+    "daisyui": "^1.14.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
